fixed spacing on authentication and myaccount pages

--- a/client/src/components/authentication/login.css
+++ b/client/src/components/authentication/login.css
@@ -19,6 +19,7 @@
   display: inline-flex;
   border-radius: 10px;
   padding: 2% 5%;
+  margin-top: 5%;
 }
 
 form.form {
