--- a/client/src/components/myAccount/menu.css
+++ b/client/src/components/myAccount/menu.css
@@ -1,3 +1,3 @@
 .container {
-  margin: auto;
+  margin-top: 5%;
 }
